--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div id="map"></div>
   <script>
       var map = L.map('map').setView([-21.047009930378817, 55.191850457343605], 12.5);
-      L.tileLayer('/{z}/{x}/{y}.png', {
+      L.tileLayer('https://romain974.github.com/test/{z}/{x}/{y}.png', {
         minZoom: 10,
         maxZoom: 17,
         tms: false,
