--- a/index.html
+++ b/index.html
@@ -1,103 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Montagnes de la Réunion en réalité augmentée</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/geojson/dist/geojson.min.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Montagnes de la Réunion en réalité augmentée</title>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/geojson/0.5.0/geojson.min.js"></script>
+
 </head>
 <body>
-	<a-scene embedded arjs="sourceType: webcam;">
-		<a-assets>
-			<a-asset-item id="mountains" src="mountains.geojson"></a-asset-item>
-		</a-assets>
-		<a-marker preset="hiro">
-			<a-entity id="mountain-names"></a-entity>
-		</a-marker>
-		<a-entity camera></a-entity>
-	</a-scene>
-	<script>
-
-		 var geojson = {
-    "type": "FeatureCollection",
-    "features": [
-        {
-            "type": "Feature",
-            "geometry": {
-                "type": "Point",
-                "coordinates": [55.502217, -21.131061]
+    <h1>Les montagnes de l'île de La Réunion</h1>
+    <a-scene embedded arjs="debugUIEnabled: false;">
+        <a-assets>
+            <a-asset-item id="mountains" src="mountains.geojson"></a-asset-item>
+        </a-assets>
+        <a-marker preset="hiro">
+            <a-entity id="mountain-names"></a-entity>
+        </a-marker>
+        <a-entity camera></a-entity>
+    </a-scene>
+    <script>
+        AFRAME.registerComponent('mountain-label', {
+            schema: {
+                name: { type: 'string' },
+                altitude: { type: 'number' }
             },
-            "properties": {
-                "Name": "Piton des Neiges",
-                "Altitude": 3071
+            init: function () {
+                this.el.setAttribute('text', {
+                    value: this.data.name + ' (' + this.data.altitude + 'm)',
+                    align: 'center',
+                    color: 'white',
+                    width: '8'
+                });
             }
-        },
-        {
-            "type": "Feature",
-            "geometry": {
-                "type": "Point",
-                "coordinates": [55.470190, -21.237119]
-            },
-            "properties": {
-                "Name": "Piton de la Fournaise",
-                "Altitude": 2632
-            }
-        },
-        {
-            "type": "Feature",
-            "geometry": {
-                "type": "Point",
-                "coordinates": [55.480874, -21.121311]
-            },
-            "properties": {
-                "Name": "Dimitile",
-                "Altitude": 1862
-            }
-        },
-        {
-            "type": "Feature",
-            "geometry": {
-                "type": "Point",
-                "coordinates": [55.512170, -21.217370]
-            },
-            "properties": {
-                "Name": "Grand Bénare",
-                "Altitude": 2898
-            }
-        },
-        {
-            "type": "Feature",
-            "geometry": {
-                "type": "Point",
-                "coordinates": [55.522650, -21.163949]
-            },
-            "properties": {
-                "Name": "Roche Écrite",
-                "Altitude": 2276
-            }
-        }
-    ]
-}
-
-			var mountains = geojson.features;
-			var mountainNames = document.querySelector("#mountain-names");
-			mountains.forEach(function(mountain) {
-				var name = mountain.properties.Name;
-				var coordinates = mountain.geometry.coordinates;
-				var altitude = mountain.properties.Altitude;
-				var label = document.createElement("a-entity");
-				label.setAttribute("text", {
-					value: name + " (" + altitude + " m)",
-					align: "center",
-					side: "double",
-					color: "white",
-					width: "10"
-				});
-				label.setAttribute("gps-entity-place", "latitude: " + coordinates[1] + "; longitude: " + coordinates[0] + ";");
-				mountainNames.appendChild(label);
-			});
-	</script>
+        });
+        fetch('./mountains.geojson')
+            .then(function (response) {
+                return response.json();
+            })
+            .then(function (data) {
+                var features = data.features;
+                var mountainNames = document.querySelector('#mountain-names');
+                features.forEach(function (feature) {
+                    var properties = feature.properties;
+                    var coordinates = feature.geometry.coordinates;
+                    var name = properties.Name;
+                    var altitude = properties.Altitude;
+                    var label = document.createElement('a-entity');
+                    label.setAttribute('gps-entity-place', 'latitude: ' + coordinates[1] + '; longitude: ' + coordinates[0] + ';');
+                    label.setAttribute('mountain-label', { name: name, altitude: altitude });
+                    mountainNames.appendChild(label);
+                });
+            })
+            .catch(function (error) {
+                console.error(error);
+            });
+    </script>
 </body>
 </html>
