--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
     <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
-    <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: -21.115833; longitude: 55.507222" scale="10 10 10"></a-entity>
+    <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: -20.926757366243933; longitude: 55.33703314975827" scale="10 10 10"></a-entity>
 </a-scene>
 </body>
 </html>
