--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <a-camera look-controls-enabled='false' arjs-device-orientation-controls='smoothingFactor: 0.1' gps-new-camera='gpsMinDistance: 5; positionMinAccuracy: 100; alert:true; '></a-camera>
 
     <!-- Piton des Neiges -->
-    <a-entity gps-new-entity-place="latitude:  -20.92535; longitude: 55.342275" position="0 3000 0" scale="10000 10000 10000">
+    <a-entity gps-new-entity-place="latitude:  -20.92535; longitude: 55.342275" position="0 3000 0" scale="100 100 100">
         <a-box color="red"></a-box>
         <a-text value="Piton des Neiges" position="0 2.2 0" color="black"></a-text>
     </a-entity>
 
     <!-- Piton Cabris -->
-    <a-entity gps-new-entity-place="latitude:  -20.92535; longitude: 55.41423" position="0 1431 0" scale="100 100 100">
+    <a-entity gps-new-entity-place="latitude:  -20.92535; longitude: 55.41423" position="0 1431 0" scale="10000 10000 10000">
         <a-box color="green"></a-box>
-        <a-text value="Piton Cabris" position="0 2.2 0" color="black"></a-text>
+        <a-text value="Piton Cabris" position="0 2.2 0" color="black" scale="100 100 100"></a-text>
     </a-entity>
 </a-scene>
 </body>
