--- a/Index2.html
+++ b/Index2.html
@@ -18,7 +18,7 @@
   <body>
     <div id="cesiumContainer"></div>
     <script>
-Cesium.Ion.defaultAccessToken = 'VOTRE_ACCESS_TOKEN';
+Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiJmMmViMTNmZC1lNThjLTQyNmUtYThiZC03OWZhYTdiZmExMWEiLCJpZCI6MzkyMjMsImlhdCI6MTYwNzM1MjY3OH0._pP38L0hUzZEf9CJinPlRTL_dJPHwMwkwFa2qzLTZSs';
 
 const viewer = new Cesium.Viewer('cesiumContainer', {
   shouldAnimate: true,
