--- a/Index2.html
+++ b/Index2.html
@@ -26,8 +26,8 @@ const viewer = new Cesium.Viewer('cesiumContainer', {
 
 navigator.geolocation.getCurrentPosition(
   (position) => {
-    const longitude = Cesium.Math.toDegrees(position.coords.longitude);
-    const latitude = Cesium.Math.toDegrees(position.coords.latitude);
+    const longitude = position.coords.longitude;
+    const latitude = position.coords.latitude;
     const altitude = position.coords.altitude || 0;
 
     viewer.camera.setView({
