--- a/Index2.html
+++ b/Index2.html
@@ -6,7 +6,7 @@
     <script src="https://cesium.com/downloads/cesiumjs/releases/1.85/Build/Cesium/Cesium.js"></script>
     <link href="https://cesium.com/downloads/cesiumjs/releases/1.85/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
     <style>
-      #cesiumContainer {
+      html,body,#cesiumContainer {
         width: 100%;
         height: 100%;
         margin: 0;
@@ -57,7 +57,7 @@ window.addEventListener('deviceorientation', (event) => {
   viewer.camera.setView({
     orientation: {
       heading: alpha,
-      pitch: -beta,
+      pitch: Cesium.Math.toRadians(90)-beta,
       roll: gamma,
     },
   });
