--- a/Index2.html
+++ b/Index2.html
@@ -48,51 +48,153 @@ navigator.geolocation.getCurrentPosition(
     timeout: 20000,
   }
 );
-function updateCameraPositionAndOrientation(alpha, beta, gamma) {
-  const cameraPosition = viewer.camera.positionCartographic;
-  const cameraHeight = cameraPosition.height;
-  const distanceToEllipsoid = cameraHeight + Cesium.Ellipsoid.WGS84.getRadius(cameraPosition);
 
-  // Ajustement des translations en fonction des axes du téléphone
-  const betaTranslation = (beta / 90) * distanceToEllipsoid;
-  const gammaTranslation = (gamma / 45) * distanceToEllipsoid;
 
-  const newPosition = Cesium.Cartesian3.add(
-    viewer.camera.position,
-    Cesium.Cartesian3.fromDegrees(gammaTranslation, -betaTranslation, 0),
-    new Cesium.Cartesian3()
-  );
-
-  // Ajustement de la rotation en fonction de l'axe Z du téléphone
-  const rotationQuaternion = Cesium.Transforms.headingPitchRollQuaternion(
-    Cesium.Math.toRadians(alpha),
-    viewer.camera.pitch,
-    viewer.camera.roll
-  );
-  const newDirection = Cesium.Matrix3.fromQuaternion(rotationQuaternion, new Cesium.Matrix3()).multiplyByVector(
-    viewer.camera.direction,
-    new Cesium.Cartesian3()
-  );
-  const newUp = Cesium.Matrix3.fromQuaternion(rotationQuaternion, new Cesium.Matrix3()).multiplyByVector(
-    viewer.camera.up,
-    new Cesium.Cartesian3()
-  );
-
-  viewer.camera.setView({
-    destination: newPosition,
-    orientation: {
-      direction: newDirection,
-      up: newUp,
-    },
-  });
+      var destination = new Cesium.Cartesian3();
+var currentScreenOrientation = window.orientation || 0;
+if (window.DeviceOrientationEvent) {
+	window.addEventListener('deviceorientation', onDeviceOrientationChanged, false);
 }
-window.addEventListener('deviceorientation', (event) => {
-  const alpha = event.alpha ? Cesium.Math.toRadians(event.alpha) : 0;
-  const beta = event.beta ? Cesium.Math.toRadians(event.beta) : 0;
-  const gamma = event.gamma ? Cesium.Math.toRadians(event.gamma) : 0;
+window.addEventListener('orientationchange', function() {
+	currentScreenOrientation = window.orientation;
+}, false);
 
-  updateCameraPositionAndOrientation(alpha, beta, gamma);;
-});
+var degtorad = Math.PI / 180; // Degree-to-Radian conversion
+
+function getBaseRotationMatrix( alpha, beta, gamma ) {
+	var _x = beta  ? beta  * degtorad : 0; 
+	var _y = gamma ? gamma * degtorad : 0; 
+	var _z = alpha ? alpha * degtorad : 0; 
+
+	var cX = Math.cos( _x );
+	var cY = Math.cos( _y );
+	var cZ = Math.cos( _z );
+	var sX = Math.sin( _x );
+	var sY = Math.sin( _y );
+	var sZ = Math.sin( _z );
+
+
+	var m11 = cZ * cY - sZ * sX * sY;
+	var m12 = - cX * sZ;
+	var m13 = cY * sZ * sX + cZ * sY;
+
+	var m21 = cY * sZ + cZ * sX * sY;
+	var m22 = cZ * cX;
+	var m23 = sZ * sY - cZ * cY * sX;
+
+	var m31 = - cX * sY;
+	var m32 = sX;
+	var m33 = cX * cY;
+
+	return [
+	m11,    m12,    m13,
+	m21,    m22,    m23,
+	m31,    m32,    m33
+	];
+}
+
+function getScreenTransformationMatrix( screenOrientation ) {
+	var orientationAngle = screenOrientation ? screenOrientation * degtorad : 0;
+
+	var cA = Math.cos( orientationAngle );
+	var sA = Math.sin( orientationAngle );
+
+	
+	var r_s = [
+	cA,    -sA,    0,
+	sA,    cA,     0,
+	0,     0,      1
+	];
+
+	return r_s;
+}
+
+
+function getWorldTransformationMatrix() {
+	var x = -90 * degtorad;
+
+	var cA = Math.cos( x );
+	var sA = Math.sin( x );
+
+	var r_w = [
+	1,     0,    0,
+	0,     cA,   -sA,
+	0,     sA,   cA
+	];
+
+	return r_w;
+}
+
+
+
+function matrixMultiply( a, b ) {
+	var final = [];
+
+	final[0] = a[0] * b[0] + a[1] * b[3] + a[2] * b[6];
+	final[1] = a[0] * b[1] + a[1] * b[4] + a[2] * b[7];
+	final[2] = a[0] * b[2] + a[1] * b[5] + a[2] * b[8];
+
+	final[3] = a[3] * b[0] + a[4] * b[3] + a[5] * b[6];
+	final[4] = a[3] * b[1] + a[4] * b[4] + a[5] * b[7];
+	final[5] = a[3] * b[2] + a[4] * b[5] + a[5] * b[8];
+
+	final[6] = a[6] * b[0] + a[7] * b[3] + a[8] * b[6];
+	final[7] = a[6] * b[1] + a[7] * b[4] + a[8] * b[7];
+	final[8] = a[6] * b[2] + a[7] * b[5] + a[8] * b[8];
+
+	return final;
+}
+
+
+function computeMatrix(alpha, beta, gamma, currentScreenOrientation) {
+	var rotationMatrix = getBaseRotationMatrix(
+	alpha,
+	beta,
+	gamma
+	); 
+	var screenTransform = getScreenTransformationMatrix( currentScreenOrientation ); 
+
+	var screenAdjustedMatrix = matrixMultiply( rotationMatrix, screenTransform ); 
+	var worldTransform = getWorldTransformationMatrix();
+
+	var finalMatrix = matrixMultiply( screenAdjustedMatrix, worldTransform );
+    
+	return finalMatrix; 
+}
+
+function getYawPitchRoll(rotationMatrix) {
+	var rm11 = rotationMatrix[0]; var rm12 = rotationMatrix[1]; var rm13 = rotationMatrix[2];
+	var rm21 = rotationMatrix[3]; var rm22 = rotationMatrix[4]; var rm23 = rotationMatrix[5];
+	var rm31 = rotationMatrix[6]; var rm32 = rotationMatrix[7]; var rm33 = rotationMatrix[8];
+	
+	var yaw = Math.atan2(rm21, rm11);
+	var pitch = Math.atan2(rm32, rm33);
+	var roll = Math.atan2(rm31, Math.sqrt(Math.pow(rm32,2) + Math.pow(rm33,2)));
+	
+	return [yaw, pitch, roll];
+}
+
+function onDeviceOrientationChanged(eventData) {
+	var beta = eventData.beta;
+	var gamma = eventData.gamma;
+	var alpha = eventData.alpha; 
+	
+	var matrix = computeMatrix(alpha, beta, gamma, currentScreenOrientation);
+	
+	
+	var YawPitchRoll = getYawPitchRoll(matrix);
+	
+	console.log(YawPitchRoll);
+	
+	viewer.camera.setView({
+    orientation : {
+       heading : -YawPitchRoll[0],
+        pitch : YawPitchRoll[1],
+		roll: -YawPitchRoll[2]
+    }
+   });
+	
+}
 
     </script>
   </body>
