--- a/Index2.html
+++ b/Index2.html
@@ -33,25 +33,21 @@
 Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiJmMmViMTNmZC1lNThjLTQyNmUtYThiZC03OWZhYTdiZmExMWEiLCJpZCI6MzkyMjMsImlhdCI6MTYwNzM1MjY3OH0._pP38L0hUzZEf9CJinPlRTL_dJPHwMwkwFa2qzLTZSs';
 
 const viewer = new Cesium.Viewer('cesiumContainer', {
-  shouldAnimate: true,
+  timeline:false,
+  animation:false,
+  fullscreenButton:false,
+  homeButton:false,
+  navigationHelpButton:false,
+  sceneModePicker:false,
+  Credit:false,
+    
+    contextOptions : {
+        webgl: {
+            alpha: true
+        }
+    }
 });
-
-navigator.geolocation.getCurrentPosition(
-  (position) => {
-    const longitude = position.coords.longitude;
-    const latitude = position.coords.latitude;
-    const altitude = position.coords.altitude || 0;
-
-    viewer.camera.setView({
-      destination: Cesium.Cartesian3.fromDegrees(longitude, latitude, altitude + 2),
-      orientation: {
-        heading: Cesium.Math.toRadians(0),
-        pitch: Cesium.Math.toRadians(-90),
-        roll: Cesium.Math.toRadians(0),
-      },
-    });
-
-	  viewer.scene.skyBox.destroy();
+	    	  viewer.scene.skyBox.destroy();
     viewer.scene.skyBox = undefined;
     viewer.scene.sun.destroy();
     viewer.scene.sun = undefined;
@@ -62,6 +58,7 @@ navigator.geolocation.getCurrentPosition(
     viewer._cesiumWidget._creditContainer.parentNode.removeChild(
     viewer._cesiumWidget._creditContainer);
 	viewer.scene.backgroundColor = Cesium.Color.TRANSPARENT;
+	    var videoElement = document.getElementById("video");
 
 	  (function()
 	{
@@ -84,6 +81,23 @@ navigator.geolocation.getCurrentPosition(
 		});
 	    
 	}) ();
+
+navigator.geolocation.getCurrentPosition(
+  (position) => {
+    const longitude = position.coords.longitude;
+    const latitude = position.coords.latitude;
+    const altitude = position.coords.altitude || 0;
+
+    viewer.camera.setView({
+      destination: Cesium.Cartesian3.fromDegrees(longitude, latitude, altitude + 2),
+      orientation: {
+        heading: Cesium.Math.toRadians(0),
+        pitch: Cesium.Math.toRadians(-90),
+        roll: Cesium.Math.toRadians(0),
+      },
+    });
+
+
 	  
   },
   (error) => {
