--- a/Index2.html
+++ b/Index2.html
@@ -52,23 +52,13 @@ const viewer = new Cesium.Viewer('cesiumContainer', {
         }
     }
 });
-	    const imageryProvider = new Cesium.WebMapTileServiceImageryProvider({
-              url : 'https://data.geopf.fr/wmts?',
-              layer : 'HR.ORTHOIMAGERY.ORTHOPHOTOS',
-              style : 'normal',
-              format : 'image/jpeg',
-              tileMatrixSetID : 'PM',
-		    alpha: 0.2
-          });
-	    viewer.imageryLayers.addImageryProvider(imageryProvider);
+     viewer.scene.globe.show=false;
 	    //viewer.terrainProvider= Cesium.CesiumTerrainProvider.fromUrl("https://wwww.reunion3d.re/terrain3D",{requestVertexNormals:true,requestWaterMask: true})
-
-	    viewer.scene.globe.translucency =  new Cesium.GlobeTranslucency({
-		    enabled : true,
-		    backFaceAlpha: 0.5,
-		    frontFAceAlpha: 0.5
-	    }
-		    )
+	 const transparence = new Cesium.GlobeTranslucency();
+	    transparence.enabled = true;
+	    transparence.backFaceAlpha=0.5;
+	    transparence.frontFAceAlpha=0.5;
+	    viewer.scene.globe.translucency =  transparence
           viewer.scene.globe.depthTestAgainstTerrain = true;
 	    	  viewer.scene.skyBox.destroy();
     viewer.scene.skyBox = undefined;
