--- a/Index2.html
+++ b/Index2.html
@@ -35,7 +35,7 @@
 Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiJmMmViMTNmZC1lNThjLTQyNmUtYThiZC03OWZhYTdiZmExMWEiLCJpZCI6MzkyMjMsImlhdCI6MTYwNzM1MjY3OH0._pP38L0hUzZEf9CJinPlRTL_dJPHwMwkwFa2qzLTZSs';
 
 const viewer = new Cesium.Viewer('cesiumContainer', {
-	terrain: new Cesium.Terrain(Cesium.CesiumTerrainProvider.fromUrl("https://wwww.reunion3d.re/terrain3D")),
+	terrain: new Cesium.Terrain(Cesium.CesiumTerrainProvider.fromUrl("https://www.reunion3d.re/terrain3D")),
 	baseLayer: null,
   timeline:false,
   animation:false,
