--- a/Index2.html
+++ b/Index2.html
@@ -35,7 +35,6 @@
 Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiJmMmViMTNmZC1lNThjLTQyNmUtYThiZC03OWZhYTdiZmExMWEiLCJpZCI6MzkyMjMsImlhdCI6MTYwNzM1MjY3OH0._pP38L0hUzZEf9CJinPlRTL_dJPHwMwkwFa2qzLTZSs';
 
 const viewer = new Cesium.Viewer('cesiumContainer', {
-	terrain: new Cesium.Terrain(Cesium.CesiumTerrainProvider.fromUrl("https://www.reunion3d.re/terrain3D")),
 	baseLayer: null,
   timeline:false,
   animation:false,
@@ -52,7 +51,14 @@ const viewer = new Cesium.Viewer('cesiumContainer', {
     }
 });
 
-	    //viewer.terrainProvider= Cesium.CesiumTerrainProvider.fromUrl("https://wwww.reunion3d.re/terrain3D",{requestVertexNormals:true,requestWaterMask: true})
+	    viewer.scene.setTerrain(
+		  new Cesium.Terrain(
+		    Cesium.CesiumTerrainProvider.fromIonAssetId(2417521,{
+        requestVertexNormals: true,
+			    requestWaterMask: false
+    }),
+		  ),
+		);
 	 const transparence = new Cesium.GlobeTranslucency();
 	    transparence.enabled = true;
 	    transparence.backFaceAlpha=0.5;
