--- a/Index2.html
+++ b/Index2.html
@@ -61,6 +61,7 @@ const viewer = new Cesium.Viewer('cesiumContainer', {
 		  ),
 		);
 	viewer.scene.imageryLayers.removeAll();
+	    viewer.scene.globe.baseColor = Cesium.Color.TRANSPARENT;
 	/*var contoursMaterial = Cesium.Material.fromType("ElevationContour");
           contoursMaterial.uniforms.spacing = 100;
           contoursMaterial.uniforms.color = Cesium.Color.BLACK;
