--- a/Index2.html
+++ b/Index2.html
@@ -17,8 +17,8 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   transform: translate(-50%, -50%);
 }
     </style>
@@ -55,7 +55,7 @@ const viewer = new Cesium.Viewer('cesiumContainer', {
 		  ),
 		);
 	viewer.scene.imageryLayers.removeAll();
-	   viewer.scene.globe.baseColor = new Cesium.Color(1, 1, 1, 0.9);
+	   viewer.scene.globe.baseColor = Cesium.Color.TRANSPARENT;
 	/*var contoursMaterial = Cesium.Material.fromType("ElevationContour");
           contoursMaterial.uniforms.spacing = 100;
           contoursMaterial.uniforms.color = Cesium.Color.BLACK;
